added new data and models

--- a/datacamp_code_along.ipynb
+++ b/datacamp_code_along.ipynb
@@ -1758,7 +1758,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create year_label column to provide infor about how\n",
+    "# create year_label column to provide info about how\n",
     "# certain years are related\n",
     "# dead ball eras, live ball/steriod eras\n",
     "\n",
