added technical report

--- a/batting_by_year_07-17_RBI-Saturday.ipynb
+++ b/batting_by_year_07-17_RBI-Saturday.ipynb
@@ -1146,7 +1146,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x227f444f160>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x217944efa90>"
       ]
      },
      "execution_count": 7,
@@ -1178,7 +1178,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x227f4559ba8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x217945e9898>"
       ]
      },
      "execution_count": 8,
@@ -2454,7 +2454,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x227f45e2e10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x21794681208>"
       ]
      },
      "execution_count": 14,
@@ -2486,7 +2486,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x227f4a634e0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x21794af7f28>"
       ]
      },
      "execution_count": 15,
@@ -9544,7 +9544,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x227fafd5828>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x21799826b00>"
       ]
      },
      "execution_count": 56,
@@ -9576,7 +9576,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x227f99fb5c0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x21794ae9c50>"
       ]
      },
      "execution_count": 57,
@@ -9608,7 +9608,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x227f4ace668>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x21799782eb8>"
       ]
      },
      "execution_count": 58,
@@ -12163,7 +12163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -12185,7 +12185,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12196,7 +12196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12216,7 +12216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12225,7 +12225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -12246,7 +12246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12257,7 +12257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -12274,7 +12274,7 @@
        " 10: [0.1845327682315908]}"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12293,7 +12293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12304,7 +12304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -12313,7 +12313,7 @@
        "array([2, 2, 2, ..., 1, 1, 1])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12324,7 +12324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -14445,7 +14445,7 @@
        "28 -0.588235  0.135783  0.031933  0.249536  0.155749             5  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14460,7 +14460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -14476,7 +14476,7 @@
        "Name: KMeans_label, dtype: int64"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14487,7 +14487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -14514,7 +14514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -14584,7 +14584,7 @@
        "Name: yearID, Length: 118, dtype: int64"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14595,7 +14595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -15231,7 +15231,7 @@
        "230  0.007989 -0.052468 -0.015262 -0.034321             1  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15244,7 +15244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -15880,7 +15880,7 @@
        "13  0.615385  0.012958  0.020553 -0.090405 -0.047535             2  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15900,7 +15900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15909,7 +15909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15921,7 +15921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15939,7 +15939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15949,7 +15949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -15969,7 +15969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15991,7 +15991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16006,7 +16006,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done  20 out of  20 | elapsed:    3.3s finished\n"
+      "[Parallel(n_jobs=4)]: Done  20 out of  20 | elapsed:    8.0s finished\n"
      ]
     }
    ],
@@ -16016,7 +16016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16025,7 +16025,7 @@
        "{'fit_intercept': True, 'normalize': True}"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16037,7 +16037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16064,7 +16064,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#serializing the model to a file \n",
+    "import pickle\n",
+    "# pickle.dump(best_lr, open(\"lr_RBI.pkl\",\"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16074,7 +16085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16083,7 +16094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16104,7 +16115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16123,7 +16134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16144,7 +16155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16225,13 +16236,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x22781906128>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2179cb90438>"
       ]
      },
      "execution_count": 98,
@@ -16264,7 +16275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16279,7 +16290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16291,7 +16302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16310,16 +16321,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# gridsearch for best parameters\n",
     "\n",
     "gs_params = {\n",
-    "    'alpha': [1, 10, 100, 1000],\n",
+    "    'alpha': [0.1, 1, 10, 100],\n",
     "    'fit_intercept': [True, False],\n",
-    "    'normalize': [True, False]\n",
     "}\n",
     "\n",
     "ridge_gridsearch = GridSearchCV(\n",
@@ -16333,7 +16343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16348,8 +16358,8 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:  1.4min\n",
-      "[Parallel(n_jobs=4)]: Done  80 out of  80 | elapsed:  2.5min finished\n"
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:  7.3min\n",
+      "[Parallel(n_jobs=4)]: Done  80 out of  80 | elapsed: 13.1min finished\n"
      ]
     }
    ],
@@ -16359,7 +16369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16380,7 +16390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16407,7 +16417,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#serializing the model to a file \n",
+    "\n",
+    "# pickle.dump(best_ridge, open(\"ridge_RBI.pkl\",\"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16416,7 +16437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16437,7 +16458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16456,7 +16477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16529,7 +16550,7 @@
        "230    14.0  15.354284   29.316073"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16550,7 +16571,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9275981521304157\n"
+     ]
+    }
+   ],
    "source": [
     "lasso = Lasso()\n",
     "lasso.fit(X_train_poly_sc, y_train)\n",
@@ -16568,8 +16597,7 @@
     "gs_params = {\n",
     "    'alpha': [0.001, 0.01, 0.1],\n",
     "    'fit_intercept': [True, False],\n",
-    "    'normalize': [True, False],\n",
-    "    'max_iter': [50, 500, 1000, 10000]\n",
+    "    'max_iter': [50, 500, 1000]\n",
     "}\n",
     "\n",
     "lasso_gridsearch = GridSearchCV(\n",
@@ -16585,7 +16613,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 48 candidates, totalling 240 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed: 38.4min\n"
+     ]
+    }
+   ],
    "source": [
     "lasso_gridsearch = lasso_gridsearch.fit(X_train_poly_sc, y_train)"
    ]
@@ -16616,6 +16660,17 @@
     "# accuracy score on test data\n",
     "lasso_test = best_lasso.score(X_test_poly_sc, y_test)\n",
     "print(lasso_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#serializing the model to a file \n",
+    "\n",
+    "# pickle.dump(best_lasso, open(\"lasso_RBI.pkl\",\"wb\"))"
    ]
   },
   {
@@ -16689,10 +16744,9 @@
     "\n",
     "gs_params = {\n",
     "    'alpha': [0.001, 0.01, 0.1],\n",
-    "    'l1_ratio': [0.1, 0.25, 0.5, 0.75, 0.9],\n",
+    "    'l1_ratio': [0.1, 0.5, 0.9],\n",
     "    'fit_intercept': [True, False],\n",
-    "    'normalize': [True, False],\n",
-    "    'max_iter': [50, 500, 1000, 10000]\n",
+    "    'max_iter': [500, 1000, 10000]\n",
     "}\n",
     "\n",
     "enet_gridsearch = GridSearchCV(\n",
@@ -16747,6 +16801,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# #serializing the model to a file \n",
+    "\n",
+    "# pickle.dump(best_enet, open(\"enet_RBI.pkl\",\"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "enetpreds = best_enet.predict(X_final_poly_sc)"
    ]
   },
@@ -16761,6 +16826,17 @@
     "rmse = np.sqrt(mse)\n",
     "print(f'RMSE: {rmse}')\n",
     "enet_score = rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# accuracy score on new data\n",
+    "enet_test_new = best_enet.score(X_final_poly_sc, last_year_df['AVE'])\n",
+    "print(enet_test_new)"
    ]
   },
   {
